# lgtm-oncall-mcp

./: .env.docker  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/clients/: README.md  claude-code.md  claude-desktop.md  hermes.md
examples/docker/: grafana-datasources.yaml  mimir.yaml
scripts/: smoke.py  smoke.sh
src/lgtm_oncall_mcp/: __init__.py  __main__.py  approval.py  audit.py  clients.py  config.py  server.py
src/lgtm_oncall_mcp/tools/: __init__.py  hands.py  senses.py  vision.py
src/lgtm_oncall_mcp/vcs/: __init__.py  base.py  bitbucket.py  github.py  util.py
tests/: conftest.py  test_approval.py  test_audit.py  test_config.py  test_hands.py  test_senses.py  test_vcs_adapters.py  test_vcs_util.py
