[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lgtm-oncall-mcp"
version = "0.1.0"
description = "MCP server giving an LLM agent a typed, auditable on-call surface on top of the LGTM stack (Grafana, Mimir, Loki, Tempo) + your VCS."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Saputra Uta" },
]
keywords = ["mcp", "model-context-protocol", "observability", "sre", "on-call", "grafana", "lgtm", "ai-agent", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastmcp>=3.3.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",
]

[project.scripts]
lgtm-oncall-mcp = "lgtm_oncall_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/SaputraUta/lgtm-oncall-mcp"
Issues = "https://github.com/SaputraUta/lgtm-oncall-mcp/issues"
Repository = "https://github.com/SaputraUta/lgtm-oncall-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/lgtm_oncall_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
